@@ -29,10 +29,12 @@
     global:
         # wxFileHistory::Set/GetBaseId()
         *wxFileHistory*etBaseId*;
+        *wxSearchCtrl*SetDescriptiveText*;
+        *wxSearchCtrl*GetDescriptiveText*;
         *wxSizerFlags*Shaped*;
         *wxSizerFlags*FixedMinSize*;
-	*wxSearchCtrl*SetDescriptiveText*;
-	*wxSearchCtrl*GetDescriptiveText*;
+        *wxToolBar*SetToolNormalBitmap;
+        *wxToolBar*SetToolDisabledBitmap;
 };
 
 # public symbols added in 2.8.1 (please keep in alphabetical order):
@@ -43,10 +45,10 @@
         *wxDirDialog*etStyle*;
         # Mac OS X only, but it still must go in IIUC
         *wxListCtrl*SetFocus*;
-		*wxListCtrl*OnChar*;
-		*wxListCtrl*OnRightDown*;
-		*wxListCtrl*OnMiddleDown*;
-		*wxListCtrl*FireMouseEvent*;
+        *wxListCtrl*OnChar*;
+        *wxListCtrl*OnRightDown*;
+        *wxListCtrl*OnMiddleDown*;
+        *wxListCtrl*FireMouseEvent*;
         # wxTreeCtrl::CollapseAll[Children]() and IsEmpty
         *wxTreeCtrl*CollapseAll*;
         *wxTreeCtrl*IsEmpty*;
